cabal-version:   3.0
name:            uniunix
version:         0.1.0.0
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          john
maintainer:      johnsmith459023@proton.me
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library unicommon
  import:           warnings
  build-depends:
    , base
    , bytestring
    , parsec

  exposed-modules:  Uniunix
  hs-source-dirs:   lib
  default-language: GHC2021

executable unihead
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , parsec
    , unicommon

  hs-source-dirs:   unihead
  default-language: GHC2021

executable unitail
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , parsec
    , unicommon

  hs-source-dirs:   unitail
  default-language: GHC2021
